@@ -1,3 +1,7 @@
+2018-10-26  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftdump.c (Print_Name): Report `head' revision and timestamps.
+
 2018-10-06  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftdump.c (Print_Charmaps): Rework without \b.
